force-app/main/default/objects/SPEN_FinancialInformation__c/SPEN_FinancialInformation__c.object-meta.xml
<CustomObject>
    <description>This custom object is for Transmission process</description>
    <label>Financial Information</label>
    <nameField>
        <label>Financial Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>