force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_A1commitmentsLARFOHL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_A1commitmentsLARFOHL__c</fullName>
    <label>A1 commitments LARF OHL</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>