force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_AcceptanceStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AcceptanceStatus__c</fullName>
    <description>This field is for Connections Financial details SAP updates process.</description>
    <label>Acceptance Status</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>