force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_ApplicationFeeType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ApplicationFeeType__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Application Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>