force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_Collectionpayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Collectionpayment__c</fullName>
    <description>This field is for Connections Financial details SAP updates process.</description>
    <label>Collection payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>