force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_Connectionchargingpaymentoptions__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Connectionchargingpaymentoptions__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Connection charging payment options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>