force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_DateInvoiced__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateInvoiced__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Date Invoiced</label>
    <type>Date</type>
</CustomField>