force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ExternalId__c</fullName>
    <description>This field will be used for SPT external Id</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>