force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_FixedCummulativeApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FixedCummulativeApplicationFee__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Fixed Cummulative Application Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>