force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_H1CommitmentsGAVCable__c.field-meta.xml
<CustomField>
    <fullName>SPEN_H1CommitmentsGAVCable__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>H1 Commitments GAV Cable</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>