force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_H1Payment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_H1Payment__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>H1 - Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>