force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_InvoiceContractNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoiceContractNumber__c</fullName>
    <description>This field is for Connections Financial details SAP updates process.</description>
    <label>Invoice/Contract Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>