force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoiceNumber__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Invoice Number</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>