force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_OfferType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OfferType__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>FWK</fullName>
            </value>
            <value>
                <fullName>FWKS</fullName>
                <isActive>false</isActive>
                <label>FWKS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>