force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_OneoffcommitmentsLARFSS__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OneoffcommitmentsLARFSS__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>One-off commitments LARF SS</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>