force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_OneoffPayment__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OneoffPayment__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>One-off Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>