force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PaymentDate__c</fullName>
    <description>This field is for Connections Financial details SAP updates process.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>