force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_QuotationValidto__c.field-meta.xml
<CustomField>
    <fullName>SPEN_QuotationValidto__c</fullName>
    <description>This field is for Connections Financial details SAP updates process.</description>
    <label>Quotation Valid to</label>
    <type>Date</type>
</CustomField>