force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_SAPReference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SAPReference__c</fullName>
    <description>This field is for Connection Process to hold SAP Reference Number for a Case</description>
    <externalId>true</externalId>
    <label>SAP Reference</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>