force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_TerminationReceivedOn__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TerminationReceivedOn__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Termination Received On</label>
    <type>Date</type>
</CustomField>