force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_TerminationReportDue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TerminationReportDue__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <inlineHelpText>Termination Received On + 6 calendar months</inlineHelpText>
    <label>Termination Report Due</label>
    <type>Date</type>
</CustomField>