force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_TerminationReportIssued__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TerminationReportIssued__c</fullName>
    <description>This field is for Transmission Financial Information process.</description>
    <label>Termination Report Issued</label>
    <type>Date</type>
</CustomField>