force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_Total__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Total__c</fullName>
    <description>Formula field used in Transmission Financial Information process to calculate the total of payment values.</description>
    <formula>SPEN_A1Payment__c + SPEN_H1Payment__c + SPEN_OneoffPayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>