force-app/main/default/objects/SPEN_FinancialInformation__c/fields/SPEN_VariableCumulativeApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>SPEN_VariableCumulativeApplicationFee__c</fullName>
    <description>rollup summary fields which sum up total cost of time writing</description>
    <label>Variable Cumulative Application Fee</label>
    <summarizedField>SPEN_TimeWriting__c.SPEN_TotalCost__c</summarizedField>
    <summaryForeignKey>SPEN_TimeWriting__c.SPEN_FinancialInformation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>