force-app/main/default/objects/SPEN_FinancialInformation__c/listViews/Acceptance_Cases.listView-meta.xml
<ListView>
    <fullName>Acceptance_Cases</fullName>
    <columns>NAME</columns>
    <columns>SPEN_AcceptanceDate__c</columns>
    <columns>SPEN_PaymentDate__c</columns>
    <columns>SPEN_AcceptanceDescription__c</columns>
    <columns>SPEN_AcceptanceStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Acceptance Cases</label>
</ListView>